Add OpenSSL 1.1.0 compatibility
Some things we used to stick our fingers into have been made opaque,
and other bits of manual fiddling are no longer needed.

ChaCha20 cipher suites are supported with no patching now, so they've
been added to the default cipher lists.

3DES cipher suites have been removed from the lists; they were only
on there for backwards compatibility, no one's using them, and
CVE-2016-2183 demonstrates the viability of birthday attacks against
triple-DES. (This type of attack is incredibly unlikely to be viable
in the context of SMTP connections, but, again, no one's using these
cipher suites.)

Passed cursory testing against OpenSSL 1.1.0 with deprecated
interfaces disabled, OpenSSL 1.0.2g, OpenSSL 1.0.1e-51.el7,
LibreSSL 2.4.2, and BoringSSL@d17d74d.

--- a/simta.conf
+++ b/simta.conf
@@ -180,7 +180,7 @@
 #
 # Set a custom cipher string for TLS connections.
 #
-#TLS_CIPHERS EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:DH+AES128:DH+AES256:DH+3DES:!MD5
+#TLS_CIPHERS EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:DH+CHACHA20:DH+AES128:DH+AES256:!MD5
 
 # AUTHN <OFF|SASL|HONEYPOT>
 #
@@ -495,7 +495,7 @@
 # Set a custom cipher string for outbound TLS connections only. If left unset,
 # an explicitly set TLS_CIPHERS will apply to both inbound and outbound.
 #
-#DELIVER_TLS_CIPHERS EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:ECDH+3DES:RSA+3DES:!MD5
+#DELIVER_TLS_CIPHERS EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:!MD5
 
 # DELIVER_MESSAGES_PER_CONNECTION <max>
 #
